# Retio-pagemap

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_PUBLIC.md  docker-compose.yml  glama.json  mcp.json  pyproject.toml  server.json  smithery.yaml
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dast.yml  docker-attested.yml  docker.yml  mcp-registry.yml  publish.yml  weekly-rebuild.yml
deploy/: Dockerfile.hardened
rules/: pagemap.mdc  web-browsing.mdc
scripts/: check_dependency_direction.sh
skills/browse-page/: SKILL.md
src/pagemap/: __init__.py  __main__.py  _progress.py  action_helpers.py  api_key.py  auth_middleware.py  browser_pool.py  browser_session.py  cache.py  check_urls.py  cli.py  config.yaml  context.py  dom_change_detector.py  dom_converters.py  errors.py  gateway.py  http_server.py  i18n.py  interactive_detector.py  logging_config.py  mcp_advanced.py  metadata.py  page_classifier.py  page_map_builder.py  pipeline_timer.py  problem_details.py  protocols.py  pruned_context_builder.py  rate_limit_middleware.py  rate_limiter.py  refresh_urls.py  repository.py  repository_sqlite.py  robots_checker.py  sanitizer.py  script_filter.py  security_headers.py  serializer.py  server.py  (+5 more)
src/pagemap/browser/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
src/pagemap/browser/security-scanner/: engine.ts  guard.ts  hidden-text-checks.ts  iframe-scanner.ts  index.ts  layout-detectors.ts  report.ts  shadow-dom.ts  signal-bus.ts  threat-detector.ts  trusted-data.ts  trusted-regions.ts  types.ts
src/pagemap/browser/shared/: spoof-tostring.ts  utils.ts
src/pagemap/browser/stealth/: audio.ts  canvas.ts  font.ts  hardware.ts  index.ts  webgl.ts
src/pagemap/core/: __init__.py  cache.py  config_registry.py  dom_change_detector.py  dom_converters.py  i18n.py  interactive_detector.py  metadata.py  page_classifier.py  page_map_builder.py  pipeline_timer.py  protocols.py  pruned_context_builder.py  sanitizer.py  serializer.py  template_cache.py
src/pagemap/core/diagnostics/: __init__.py  action_diagnostics.py  antibot_detector.py  auto_remap.py  auto_threshold.py  eq_score.py  i18n_patterns.py  page_state_detector.py  pruning_confidence.py  scroll_merge.py  spa_loader.py  suggested_actions.py
src/pagemap/core/ecommerce/: __init__.py  _card_extractor.py  barrier_handler.py  cart_engine.py  cookie_patterns.py  e2e_site_config.py  flow_state_machine.py  listing_engine.py  login_detector.py  option_analyzer.py  popup_detector.py  product_engine.py  search_engine.py  site_hints.py
src/pagemap/core/preprocessing/: normalize.py
src/pagemap/core/pruning/: __init__.py  aom_filter.py  compressor.py  context.py  pipeline.py  preprocessor.py  pruner.py  task_vector.py  tier_processor.py
src/pagemap/data/js/: checksums.json  security_scanner.js  stealth_bundle.js
src/pagemap/diagnostics/: __init__.py  action_diagnostics.py  antibot_detector.py  auto_remap.py  auto_threshold.py  eq_score.py  i18n_patterns.py  page_state_detector.py  pruning_confidence.py  scroll_merge.py  spa_loader.py  suggested_actions.py
src/pagemap/ecommerce/: __init__.py  _card_extractor.py  barrier_handler.py  cart_engine.py  cookie_patterns.py  e2e_site_config.py  flow_state_machine.py  listing_engine.py  login_detector.py  option_analyzer.py  popup_detector.py  product_engine.py  search_engine.py  site_hints.py
src/pagemap/preprocessing/: __init__.py  normalize.py  preprocess.py  schemas.py
src/pagemap/pruning/: __init__.py  aom_filter.py  compressor.py  pipeline.py  preprocessor.py  pruner.py
src/pagemap/server/: __init__.py  action_helpers.py  barrier_dismisser.py  browser_pool.py  browser_session.py  context.py  http_server.py  mcp_advanced.py  multi_tab.py  plugin_integrity.py  session_manager.py  tool_authz.py  url_validation.py  ws_session_manager.py
src/pagemap/telemetry/: __init__.py  collector.py  events.py  privacy.py  writer.py
tests/: _pruning_helpers.py  conftest.py  test_a1_a5_integration.py  test_a2_pipeline_integration.py  test_acquire_context.py  test_action_result_summary.py  test_action_retry.py  test_affordance_check.py  test_agent_friendly_errors.py  test_allow_local.py  test_aom_filter_signals.py  test_aom_filter_unit.py  test_api_key.py  test_auth_middleware.py  test_ax_tree_isolation.py  test_barrier_dismisser.py  test_batch_page_map.py  test_benchmark_fixes.py  test_browser_pool.py  test_browser_recycling.py  test_browser_session.py  test_browser_session_pool.py  test_cache.py  test_captcha_detection.py  test_card_detector_dom.py  test_cdp_timeouts.py  test_check_urls.py  test_cjk_token_budget.py  test_cli_errors.py  test_cli_smoke.py  test_cli_ux.py  test_compression_functions.py  test_compressor_block_tree.py  test_config_registry.py  test_context.py  test_crash_recovery.py  test_detail_level.py  test_dom_change_detector.py  test_dom_converters.py  test_dynamic_schema.py  (+87 more)
tests/test_diagnostics/: conftest.py  test_action_diagnostics.py  test_antibot_detector.py  test_auto_remap.py  test_auto_threshold.py  test_diagnostic_result.py  test_enhanced_diagnostics.py  test_eq_score.py  test_page_state_detector.py  test_pruning_confidence.py  test_run_diagnostics.py  test_scroll_merge.py  test_serializer_diagnostics.py  test_spa_loader.py  test_suggested_actions.py
tests/test_ecommerce/: conftest.py  test_barrier_handler.py  test_cart_engine.py  test_cart_flow_deep.py  test_e2e_flow.py  test_ecommerce_enhanced.py  test_listing_engine.py  test_popup_detector.py  test_price_normalization.py  test_product_engine.py  test_search_engine.py  test_site_hints.py
