[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retio-pagemap"
version = "0.1.0"
description = "Structured web page representation for AI agents — 97% HTML token reduction"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Retio AI"}]
readme = "README.md"
keywords = [
    "web-scraping",
    "ai-agent",
    "mcp",
    "html-compression",
    "playwright",
    "token-reduction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "lxml>=5.0.0",
    "tiktoken>=0.5.0",
    "beautifulsoup4>=4.9.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
cli = [
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]
benchmark = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "readability-lxml>=0.8.0",
    "html2text>=2024.2.0",
    "firecrawl-py>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
benchmark = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "readability-lxml>=0.8.0",
    "html2text>=2024.2.0",
    "firecrawl-py>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/Retio-ai/pagemap"
Repository = "https://github.com/Retio-ai/pagemap"
Issues = "https://github.com/Retio-ai/pagemap/issues"

[project.scripts]
pagemap = "pagemap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pagemap"]
exclude = [
    "src/pagemap/benchmark/**",
    "src/pagemap/data/**",
    "src/pagemap/collect.py",
    "src/pagemap/collect_sim.py",
    "src/pagemap/collect_scenarios.py",
    "src/pagemap/validate_axtree.py",
    "src/pagemap/config.yaml",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "src/pagemap/benchmark/**",
    "src/pagemap/data/**",
    "src/pagemap/collect.py",
    "src/pagemap/collect_sim.py",
    "src/pagemap/collect_scenarios.py",
    "src/pagemap/validate_axtree.py",
    "data/",
    "mvp/",
    "baseline/",
    "packages/",
    "docs/",
    "phase0/",
    "research/",
    "results/",
    "scripts/",
    ".github/",
    ".claude/",
    "*.pdf",
    "uv.lock",
    "README_DRAFT.md",
    "ROADMAP.md",
    ".env.example",
    ".mcp.json.example",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM102", # nested if (often more readable than combined)
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["pagemap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
