[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retio-pagemap"
version = "0.7.3"
description = "Structured web page representation for AI agents — 97% HTML token reduction"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}
authors = [{name = "Retio AI"}]
readme = "README.md"
keywords = [
    "web-scraping",
    "ai-agent",
    "mcp",
    "html-compression",
    "playwright",
    "token-reduction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "lxml>=5.0.0",
    "tiktoken>=0.5.0",
    "beautifulsoup4>=4.9.0",
    "rapidfuzz>=3.0.0",
    "pyyaml>=6.0",
    "protego>=0.3.0",
    "structlog>=24.1.0",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.22.0",
]

[project.optional-dependencies]
cli = [
    "tabulate>=0.9.0",
    "rich>=13.0.0",
]
benchmark = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "readability-lxml>=0.8.0",
    "html2text>=2024.2.0",
    "firecrawl-py>=1.0.0",
    "httpx>=0.27.0",
]
paddle = [
    "paddle-python-sdk>=1.13.0",
]
redis = [
    "redis>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "pytest-randomly>=3.15",
    "hypothesis>=6.100",
    "ruff>=0.4.0",
    "pip-audit>=2.10.0",
    "bandit>=1.9.0",
    "httpx>=0.27.0",
]
benchmark = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "readability-lxml>=0.8.0",
    "html2text>=2024.2.0",
    "firecrawl-py>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/Retio-ai/pagemap"
Repository = "https://github.com/Retio-ai/pagemap"
Issues = "https://github.com/Retio-ai/pagemap/issues"

[project.scripts]
pagemap = "pagemap.cli:main"
retio-pagemap = "pagemap.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pagemap"]
exclude = [
    "src/pagemap/benchmark/**",
    "src/pagemap/data/**",
    "src/pagemap/collect.py",
    "src/pagemap/collect_sim.py",
    "src/pagemap/collect_scenarios.py",
    "src/pagemap/validate_axtree.py",
    "src/pagemap/config.yaml",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "src/pagemap/benchmark/**",
    "src/pagemap/data/**",
    "src/pagemap/collect.py",
    "src/pagemap/collect_sim.py",
    "src/pagemap/collect_scenarios.py",
    "src/pagemap/validate_axtree.py",
    "data/",
    "mvp/",
    "baseline/",
    "packages/",
    "docs/",
    "phase0/",
    "research/",
    "results/",
    "scripts/",
    "todo/",
    ".github/",
    ".claude/",
    ".claude-plugin/",
    ".cursor-plugin/",
    "skills/",
    "rules/",
    "mcp.json",
    ".playwright-mcp/",
    ".mcpregistry_*",
    ".env",
    ".env.example",
    ".mcp.json",
    ".mcp.json.example",
    "README.md",
    "README_DRAFT.md",
    "ROADMAP.md",
    "BUSINESS_PLAN_DRAFT.md",
    "DIRECTION.md",
    "AGPL_TRANSITION_CHECKLIST.md",
    "server.json",
    "smithery.yaml",
    "glama.json",
    "*.pdf",
    "uv.lock",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM102", # nested if (often more readable than combined)
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["pagemap"]

[tool.bandit]
exclude_dirs = [
    "tests",
    "src/pagemap/benchmark",
    "src/pagemap/data",
    "src/pagemap/collect.py",
    "src/pagemap/collect_sim.py",
    "src/pagemap/collect_scenarios.py",
    "src/pagemap/validate_axtree.py",
]
skips = [
    "B101",  # assert — internal invariant checks
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
addopts = "--strict-markers -ra"
markers = [
    "allow_real_get_session: opt out of the _block_real_browser safety net",
    "snapshot: requires data/snapshots/ test data",
    "smoke: CLI smoke tests (subprocess-based, no network by default)",
    "network: requires network access and Playwright Chromium",
    "fuzz: property-based fuzz tests (hypothesis)",
]

[tool.coverage.run]
source = ["pagemap"]
omit = [
    "src/pagemap/benchmark/*",
    "src/pagemap/data/*",
    "src/pagemap/collect.py",
    "src/pagemap/collect_sim.py",
    "src/pagemap/collect_scenarios.py",
    "src/pagemap/validate_axtree.py",
    "src/pagemap/__main__.py",
    "src/pagemap/cli.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]
